o Only compile testsuite on "make check" not on "make"

--- a/trunk/testsuite/slurm_unit/common/Makefile.am
+++ b/trunk/testsuite/slurm_unit/common/Makefile.am
@@ -6,8 +6,18 @@ else
 elan_testprogs =
 endif
 
-INCLUDES = -I$(top_srcdir)
+INCLUDES = 	-I$(top_srcdir)
+LDADD =		$(top_builddir)/src/common/libcommon.la
 
-noinst_PROGRAMS = $(elan_testprogs) pack-test log-test stream_server stream_client bitstring-test slurm_protocol_message_client slurm_protocol_message_server
+check_PROGRAMS = $(TESTS)
 
-LDADD   = $(top_builddir)/src/common/libcommon.la
+TESTS = \
+	$(elan_testprogs) \
+	pack-test \
+        log-test \
+        stream_server \
+        stream_client \
+        bitstring-test \
+        slurm_protocol_message_client \
+        slurm_protocol_message_server
+
