--- a/trunk/testsuite/slurm_unit/api/manual/Makefile.am
+++ b/trunk/testsuite/slurm_unit/api/manual/Makefile.am
@@ -1,15 +1,18 @@
 AUTOMAKE_OPTIONS = foreign
 
-noinst_PROGRAMS = cancel-tst \
-		complete-tst \
-		allocate-tst \
-		job_info-tst \
-		node_info-tst \
-		partition_info-tst \
-		reconfigure-tst \
-		submit-tst \
-		update_config-tst
+INCLUDES =        -I$(top_srcdir) 
+LDADD    =        $(top_builddir)/src/api/libslurm.la
+check_PROGRAMS =  $(TESTS)
+
+TESTS = \
+	cancel-tst \
+	complete-tst \
+	allocate-tst \
+	job_info-tst \
+	node_info-tst \
+	partition_info-tst \
+	reconfigure-tst \
+	submit-tst \
+	update_config-tst
 		
 
-INCLUDES = -I$(top_srcdir) 
-LDADD    = $(top_builddir)/src/api/libslurm.la
