o properly define __strip macro

--- a/trunk/slurm.spec.in
+++ b/trunk/slurm.spec.in
@@ -23,7 +23,7 @@ BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}
 # 
 # Don't strip installed binaries for now:
 #
-%define %__strip ""
+%define __strip ""
 
 
 %package devel
