o testsuite: remove irrelevant tests, update Makefiles to run only    standalone tests with `make check' (still can use dejagnu for other    tests)  o src/api/Makefile.am : remove libslurm.sym on distclean

--- a/trunk/src/api/Makefile.am
+++ b/trunk/src/api/Makefile.am
@@ -54,6 +54,9 @@ libslurm_la_DEPENDENCIES   = libslurm.sym $(common_dir)/libcommon.la
 libslurm.sym : $(top_builddir)/slurm/slurm.h 
 	sed -n 's/^extern.* \(slurm[^ ]*\).*$$/\1/p' $< >libslurm.sym
 
+distclean-local: 
+	-rm libslurm.sym
+
 force:
 $(libslurm_la_LIBADD) : force
 	@cd `dirname $@` && $(MAKE) `basename $@`
