--- a/trunk/doc/man/Makefile.am
+++ b/trunk/doc/man/Makefile.am
@@ -1,5 +1,7 @@
 # $Id$
 
+EXTRA_DIST = man1 man3 man5 man8 
+
 man1_MANS =            \
 	man1/scancel.1 \
 	man1/scontrol.1\
@@ -58,5 +60,6 @@ man5_MANS = man5/slurm.conf.5
 man8_MANS = man8/slurmctld.8 \
 	man8/slurmd.8
 
-EXTRA_DIST = man1 man3 man5 man8 
-#EXTRA_DIST = $(man1_MANS) $(man3_MANS) $(man5_MANS) $(man8_MANS) 
+dist-hook:
+	-rm -rf `find $(distdir) -name CVS`
+
