o fix bug in top level Makefile.am  o Small changes to slurm.conf.example  o use AC_HELP_STRING on help string for --with-ssl=DIR

--- a/trunk/Makefile.am
+++ b/trunk/Makefile.am
@@ -16,7 +16,7 @@ EXTRA_DIST =			\
 	AUTHORS			\
 	INSTALL			\
 	NEWS			\
-	ChangeLog		\
+	ChangeLog		
 	
 slurmincludedir=$(includedir)/slurm
 slurminclude_HEADERS =		\
