o Makefile.am : include META  o slurm.spec.in : fix bug in --with debug  o doc/man/man1/srun.1 : --kill-off was renamed to --no-kill

--- a/trunk/Makefile.am
+++ b/trunk/Makefile.am
@@ -16,7 +16,8 @@ EXTRA_DIST =			\
 	AUTHORS			\
 	INSTALL			\
 	NEWS			\
-	ChangeLog		
+	ChangeLog		\
+	META
 	
 slurmincludedir=$(includedir)/slurm
 slurminclude_HEADERS =		\
