o use pkginclude instead of slurminclude for HEADERS

--- a/trunk/Makefile.am
+++ b/trunk/Makefile.am
@@ -19,8 +19,7 @@ EXTRA_DIST =			\
 	ChangeLog		\
 	META
 	
-slurmincludedir=$(includedir)/slurm
-slurminclude_HEADERS =		\
+pkginclude_HEADERS =		\
 	slurm/slurm.h 		\
 	slurm/slurm_errno.h
 
