--- a/trunk/slurm.spec.in
+++ b/trunk/slurm.spec.in
@@ -44,7 +44,7 @@ Requires: slurm
 %package doc
 Summary: Extra documentation for SLURM.
 Group: Documentation
-BuildRequires: dia
+BuildRequires: 
 
 %package auth-none
 Summary: SLURM auth NULL implementation (no authentication)
