Draft of a slurmd security test installed.

--- a/trunk/testsuite/slurm_unit/slurmd/Makefile.am
+++ b/trunk/testsuite/slurm_unit/slurmd/Makefile.am
@@ -1,24 +1,14 @@
 AUTOMAKE_OPTIONS = foreign
 
-#noinst_PROGRAMS = task_mgr-test circular_buffer-test task_launch-test credential_util-test
+noinst_PROGRAMS = security_3_1
 
-if WITH_ELAN
-interconnect_lib = $(top_srcdir)/src/slurmd/libelan_interconnect.la
-else
-interconnect_lib = $(top_srcdir)/src/slurmd/libno_interconnect.la
-endif
-	
+TESTS = security_3_1 
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src/common
-LDADD   = $(top_srcdir)/src/common/libcommon.la \
-	$(top_srcdir)/src/slurmd/task_mgr.o \
-	$(top_srcdir)/src/slurmd/shmem_struct.o \
-	$(top_srcdir)/src/slurmd/circular_buffer.o \
-	$(top_srcdir)/src/slurmd/threaded_io.o \
-	$(top_srcdir)/src/slurmd/reconnect_utils.o \
-	$(top_srcdir)/src/slurmd/io_threads.o \
-	$(top_srcdir)/src/slurmd/pipes.o \
-	$(top_srcdir)/src/slurmd/setenvpf.o \
-	$(SSL_LIBS) \
-	$(interconnect_lib) 
 
+LDADD   = $(top_srcdir)/src/common/libcommon.la \
+	$(SSL_LIBS)
+
+force :
+$(LDADD) : force
+	@cd `dirname $@` && $(MAKE) `basename $@`
