Functioning security test 3.1

--- a/trunk/testsuite/slurm_unit/slurmd/Makefile.am
+++ b/trunk/testsuite/slurm_unit/slurmd/Makefile.am
@@ -7,6 +7,7 @@ TESTS = security_3_1
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src/common
 
 LDADD   = $(top_srcdir)/src/common/libcommon.la \
+	$(top_srcdir)/src/api/libslurm.la \
 	$(SSL_LIBS)
 
 force :
