Makefile changes per Mark Grondona. Script added for security test 3.2 use.

--- a/trunk/testsuite/slurm_unit/slurmd/Makefile.am
+++ b/trunk/testsuite/slurm_unit/slurmd/Makefile.am
@@ -1,8 +1,6 @@
 AUTOMAKE_OPTIONS = foreign
 
-noinst_PROGRAMS = security_3_1
-
-TESTS = security_3_1 
+check_PROGRAMS = security_3_1
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src/common
 
