o change references to top_srcdir to top_builddir to allow builds outside    of srcdir

--- a/trunk/testsuite/slurm_unit/slurmd/Makefile.am
+++ b/trunk/testsuite/slurm_unit/slurmd/Makefile.am
@@ -11,8 +11,9 @@ check_PROGRAMS = \
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src/common
 
-LDADD   = $(top_srcdir)/src/common/libcommon.la \
-	$(top_srcdir)/src/api/libslurm.la \
+LDADD   = \
+	$(top_builddir)/src/common/libcommon.la \
+	$(top_builddir)/src/api/libslurm.la \
 	$(SSL_LIBS)
 
 force :
