--- a/trunk/doc/Makefile.am
+++ b/trunk/doc/Makefile.am
@@ -2,12 +2,12 @@
 
 SUBDIRS = man 
 
+
 EXTRA_DIST = \
-	html/LCM.arch.png \
-	html/LCM.communicate.png \
-	html/SLURM.components.gif \
+	html/arch.png \
+	html/entities.png \
 	html/programmer.guide.html \
-	html/quick.start.guide.html \
+	html/quickstart.html \
 	html/plugins.html \
 	html/authplugins.html \
 	html/slurm.png 
