--- a/trunk/etc/slurm.conf.example
+++ b/trunk/etc/slurm.conf.example
@@ -59,7 +59,7 @@
 #
 # Example:
 # 
-# SlurmdSpoolDir=/tmp/slurmd	# default: "/tmp/slurmd"
+# SlurmdSpoolDir=/tmp/slurmd	# default: "/var/spool/slurm"
 
 
 #
@@ -131,7 +131,7 @@
 # o Define the authentication method for communicating between SLURM
 #   components
 #
-# "auth/none" : no authentication, the default
+# "auth/none"  : no authentication, the default
 # "auth/authd" : Brett Chun's authd
 #
 # AuthType=auth/none
@@ -141,7 +141,7 @@
 #   colon-separated list of directories, just like the PATH
 #   environment variable.
 #
-# PluginDir=/usr/local/lib # default: PREFIX/lib/slurm
+# PluginDir=/etc/slurm/plugins # default: PREFIX/lib/slurm
 
 #
 # o Define some timeout values for the slurm controller and backup
