o distribute public design document, i.e. include it in make dist

--- a/trunk/doc/Makefile.am
+++ b/trunk/doc/Makefile.am
@@ -14,4 +14,9 @@ EXTRA_DIST = \
 	html/plugins.html \
 	html/authplugins.html \
 	html/slurm.png \
+	pubdesign/Makefile \
+	pubdesign/report.tex \
+	pubdesign/sample.config \
+	figures \
+	common \
 	$(html_DATA)
